--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@impor //		NAVIGATION   20-70
+//		HEADER	73-
+
+
 *,
 *::before,
 *::after {
@@ -73,5 +77,42 @@ html {
           transform: rotate(-15deg);
   -webkit-transition-delay: 0.2s;
           transition-delay: 0.2s;
+}
+
+.header {
+  height: 100vh;
+  width: 100vw;
+  background-image: url(/img/photographer-g9dd126508_1920.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 1;
+}
+
+.header::after {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background-color: #607f88;
+  mix-blend-mode: multiply;
+  z-index: -1;
+}
+
+.header__arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  height: 100%;
+  color: #fff;
+  z-index: 10;
+  font-size: 6rem;
+  padding-bottom: 0.5em;
 }
 /*# sourceMappingURL=main.css.map */
