--- a/css/main.css
+++ b/css/main.css
@@ -465,4 +465,34 @@ html {
 .slider__carousel__span:hover .slider__carousel__span__description {
   opacity: 1;
 }
+
+.prices {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.prices__h2 {
+  color: #fff;
+  font-size: 6rem;
+  padding: 1em;
+}
+
+.prices__p {
+  color: #fff;
+  font-size: 2rem;
+  padding: 1.5em;
+  line-height: 150%;
+  letter-spacing: 1.5px;
+}
 /*# sourceMappingURL=main.css.map */
