--- a/css/main.css
+++ b/css/main.css
@@ -239,8 +239,10 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
-  background-color: #333232;
-  font-family: 'Poppins', sans-serif;
+  background-color: #3e3f3f;
+  background-image: -webkit-gradient(linear, left top, right top, from(#3e3f3f), color-stop(69%, #7c7d7f));
+  background-image: linear-gradient(90deg, #3e3f3f 0%, #7c7d7f 69%);
+  font-family: "Poppins", sans-serif;
 }
 
 .burger-btn {
@@ -330,14 +332,14 @@ html {
 .header__h1 {
   color: #fff;
   font-size: 7rem;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
 }
 
 .header::after {
   content: "";
   position: absolute;
   inset: 0;
-  background-color: #607f88;
+  background-color: #2e3233;
   mix-blend-mode: multiply;
   z-index: -1;
 }
@@ -402,7 +404,7 @@ html {
   -webkit-transform: translatex(-50%);
           transform: translatex(-50%);
   z-index: 100;
-  font-family: 'Bebas Neue';
+  font-family: "Bebas Neue";
 }
 
 .slider__carousel {
@@ -480,6 +482,8 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 1400px;
+  margin: auto;
 }
 
 .prices__h2 {
@@ -494,5 +498,35 @@ html {
   padding: 1.5em;
   line-height: 150%;
   letter-spacing: 1.5px;
+}
+
+footer {
+  background-color: #2e3233;
+  border-top: 2px solid black;
+}
+
+footer .wrapper {
+  max-width: 1400px;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .map {
+  display: block;
+  padding: 4em;
+}
+
+footer .contact {
+  font-size: 2rem;
+  color: #fff;
+  padding: 4em;
 }
 /*# sourceMappingURL=main.css.map */
